B端代码注释优化