@@ -35,14 +35,14 @@ import org.springframework.web.bind.annotation.RestController;
  */
 @RestController
 @RequestMapping("/b")
-@Tag(name = "5-处方模板", description = "处方模板列表/创建/删除")
+@Tag(name = "处方模板", description = "处方模板列表/创建/删除")
 @RequiredArgsConstructor
 public class PrescriptionTemplateController {
 
     private static final int MAX_PAGE_SIZE = 100;
 
     private static int clampSize(int size) {
-        return Math.max(1, Math.min(size, MAX_PAGE_SIZE));
+        return Math.clamp(size, 1, MAX_PAGE_SIZE);
     }
 
     private final PrescriptionTemplateService templateService;
